tests/errors/lex_test20.kt
// This file contains an illegal token
field
